--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,12 @@
     "psr-4": {
       "emreg\\Contact\\": "src/"
     }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "emreg\\Contact\\ContactServiceProvider"
+      ]
+    }
   }
 }
